--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -48,3 +48,4 @@ $red: (
 @import "mixins/services.scss";
 @import "mixins/icons.scss";
 @import "mixins/typography.scss";
+@import "mixins/inputs.scss";
