--- a/src/styles/mixins/inputs.scss
+++ b/src/styles/mixins/inputs.scss
@@ -2,9 +2,9 @@
   border: 0;
   padding: 8px 20px;
   font-size: 14px;
+  color: #fff;
   border-radius: var(--radius);
-  background-color: #E4ECF6;
-  box-shadow: 5px 5px 10px var(--shadow-color), 1px 1px 2px var(--shadow-color), -6px -6px 15px rgba(255,255,255,0.9), -1px -1px 3px 1px rgba(255,255,255,0.9);
+  background-color: #81a1c1;
   outline: 0;
 }
 
