--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -1,5 +1,13 @@
 // Variables
 // Themes color
+$background-color--dark: #d8dee9;
+$background-color--base: #e5e9f0;
+$background-color--light: #eceff4;
+
+
+$polar--light: #4c566a;
+
+
 $light-background-color: #178a9e;
 $dark-background-color: #002a67;
 $grey-background-color: #f2f2f2;
@@ -9,7 +17,7 @@ $key-color: #b80000;
 $key-underline-color: fade($key-color, 70);
 $link-color: $key-color;
 $link-underline-color: fade($link-color, 35%);
-$text-color: #000;
+$text-color: #2e3440;
 $text-color--light: #77828c;
 $text-color--footer-adresses: #ccc;
 $text-reverse-color: #fff;
