--- a/src/styles/mixins/inputs.scss
+++ b/src/styles/mixins/inputs.scss
@@ -2,10 +2,17 @@
   border: 0;
   padding: 8px 20px;
   font-size: 14px;
-  color: #fff;
+  color: $polar--light;
   border-radius: var(--radius);
-  background-color: #81a1c1;
+  background-color: $background-color--light;
   outline: 0;
+  box-shadow: inset 0 0 0 1px darken($background-color--dark, 10%);
+
+  &.general {
+    color: #fff;
+    background-color: $polar--light;
+    box-shadow: none;
+  }
 }
 
 @mixin text-input {
